# SOVERSOVEREIGN-SHIELD__Adversary_Emulation_Defense__Purple-Team

./: .env.example.txt  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.sh  config.json.example.json  setup.sh  shield-policy.yaml
ansible/: .gitignore  kubeconfig.yaml  setup_nodes.yml  shield-policy.yaml  ssh-copy-id odj@192.168.19.147  ssh-copy-id odj@192.168.19.147.pub  ssh-keygen -t rsa -b 4096  ssh-keygen -t rsa -b 4096.pub
ansible/inventory/: hosts.ini  v2-inventory.ini
ansible/playbooks/: deploy_shield.yaml
ansible/playbooks/incident-response/: gather_evidence.yaml  isolate_node.yaml
ansible/playbooks/maintenance/: backup_configs.yaml  restore_configs.yaml
ansible/roles/k3s_install/tasks/: main.yaml
ansible/roles/os_hardening/handlers/: main.yaml
ansible/roles/os_hardening/tasks/: main.yml
